# reedb

./: .gitignore  CMakeLists.txt
include/: ReedbConfig.h.in
lib/: CMakeLists.txt
lib/private/: core.c  vault.c
lib/private/headers/: params.h  utils.h
lib/public/: config.h  core.c  core.h  p_settings.h  vault.h
reedb/native/src/cpp/: rcry_wrapper.cpp  tester.cpp
src/: CMakeLists.txt  main  main.c
